<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>projet-isa-devops-20-team-d-20</artifactId>
        <groupId>fr.unice.polytech.isa.dd</groupId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>DeliveryComponent</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <versions.java>1.8</versions.java>
    </properties>


  <dependencies>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${versions.json}</version>
    </dependency>
    <!-- Dependencies for the OpenEJB framework (provided at runtime by the app server) -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>javaee-api</artifactId>
      <version>${versions.javaee}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-core</artifactId>
      <version>${versions.openejb}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>tomee-embedded</artifactId>
      <version>${versions.tomee}</version>
      <scope>provided</scope>
    </dependency>
    <!-- Dependency to integrate REST clients (order matters for CXF) (provided) -->
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-cxf</artifactId>
      <version>${versions.openejb}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>openejb-cxf-rs</artifactId>
      <version>${versions.openejb}</version>
      <scope>provided</scope>
    </dependency>
    <!-- Dependencies for the JSF framework (provided)-->
    <dependency>
      <groupId>org.apache.myfaces.core</groupId>
      <artifactId>myfaces-api</artifactId>
      <version>${versions.myface}</version>
      <scope>provided</scope>
    </dependency>
    <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) (tests only) -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${versions.junit}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${versions.mockito}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.cukespace</groupId>
      <artifactId>cukespace-core</artifactId>
      <version>${versions.cukespace}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <version>${versions.arquillian.junit}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.shrinkwrap.resolver</groupId>
      <artifactId>shrinkwrap-resolver-depchain</artifactId>
      <version>${versions.shrinkwrap}</version>
      <type>pom</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomee</groupId>
      <artifactId>arquillian-tomee-embedded</artifactId>
      <version>${versions.tomee}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>fr.unice.polytech.isa.dd</groupId>
      <artifactId>Entities</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>fr.unice.polytech.isa.dd</groupId>
      <artifactId>ProviderRegisterComponent</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java8</artifactId>
      <version>5.5.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <distributionManagement>
    <repository>
      <id>central</id>
      <name>team-d-releases</name>
      <url>http://teamd-isadevops.francecentral.cloudapp.azure.com:8081/artifactory/libs-release-local</url>
      <!--<url>http://localhost:8081/artifactory/libs-release-local</url>-->

    </repository>

    <snapshotRepository>
      <id>snapshots</id>
      <name>team-d-snapshots</name>
      <url>http://teamd-isadevops.francecentral.cloudapp.azure.com:8081/artifactory/libs-snapshot-local</url>
      <!--<url>http://localhost:8081/artifactory/libs-snapshot-local</url>-->
    </snapshotRepository>
  </distributionManagement>

  <build>
    <finalName>DeliveryComponent</finalName>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
        <groupId>org.apache.openjpa</groupId>
        <artifactId>openjpa-maven-plugin</artifactId>
        <version>${versions.openjpa}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.6.1</version>
          <configuration>
            <source>${versions.java}</source>
            <target>${versions.java}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.2</version>
            <configuration>
                <attachClasses>true</attachClasses>
                <classesClassifier>classes</classesClassifier>
            </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.tomee.maven</groupId>
          <artifactId>tomee-maven-plugin</artifactId>
          <version>${versions.tomee}</version>
          <configuration>
            <!-- From TomEE to TomEE+ to support the web services stack -->
            <tomeeClassifier>plus</tomeeClassifier>
            <args>-Xmx512m -XX:PermSize=256m</args>
            <deployOpenEjbApplication>true</deployOpenEjbApplication>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
